<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.daubedesign.mentalmagic.WaveFragment">

    <android.support.constraint.Guideline
        android:id="@+id/leftVerticalGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="298dp" />

    <android.support.constraint.Guideline
        android:id="@+id/rightVerticalGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="86dp" />

    <Button
        android:id="@+id/clubsButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:alpha="0"
        android:text="@string/c"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/heartsButton"
        app:layout_constraintEnd_toStartOf="@+id/rightVerticalGuide"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/heartsButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:alpha="0"
        android:text="@string/h"
        app:layout_constraintBottom_toTopOf="@+id/spadesButton"
        app:layout_constraintEnd_toStartOf="@+id/rightVerticalGuide"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clubsButton" />

    <Button
        android:id="@+id/spadesButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:alpha="0"
        android:text="@string/s"
        app:layout_constraintBottom_toTopOf="@+id/diamondsButton"
        app:layout_constraintEnd_toStartOf="@+id/rightVerticalGuide"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heartsButton" />

    <Button
        android:id="@+id/diamondsButton"
        android:layout_width="89dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:alpha="0"
        android:text="@string/d"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rightVerticalGuide"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spadesButton" />

    <TextView
        android:id="@+id/waveYouWillChooseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/wave_you_will_choose_the"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/waveImageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/wave_playing_card_suit_image"
        android:src="@drawable/clubs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/leftVerticalGuide"
        app:layout_constraintStart_toStartOf="@+id/rightVerticalGuide"
        app:layout_constraintTop_toBottomOf="@+id/waveYouWillChooseText" />

</android.support.constraint.ConstraintLayout>
